<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.damkow.luxsoftrecruitment.viewmodels.MoviesViewModel" />
    </data>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/menu_movie_details"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/details_fragment_title" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/padding_normal"
                android:paddingTop="@dimen/toolbar_top_padding"
                android:paddingEnd="@dimen/padding_normal"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                tools:context=".MovieDetailsFragment">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:contentDescription="@string/movie_image_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:movieImageFromUrl="@{viewModel.selectedMovie.backdropPath}"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_big"
                    android:ellipsize="end"
                    android:text="@{viewModel.selectedMovie.title}"
                    android:textAppearance="@style/TitleLabel"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    tools:text="No Time to Die" />

                <TextView
                    android:id="@+id/score_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_big"
                    android:text="@string/average_score_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title_label" />

                <TextView
                    android:id="@+id/score_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    app:layout_constraintStart_toEndOf="@+id/score_title_label"
                    app:layout_constraintTop_toTopOf="@+id/score_title_label"
                    app:votes="@{viewModel.selectedMovie.voteAverage}"
                    tools:text="8.5" />

                <TextView
                    android:id="@+id/release_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@string/release_date_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/score_label" />

                <TextView
                    android:id="@+id/date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_normal"
                    android:text="@{viewModel.selectedMovie.releaseDate}"
                    app:layout_constraintStart_toEndOf="@+id/release_date_title"
                    app:layout_constraintTop_toTopOf="@+id/release_date_title"
                    tools:text="@tools:sample/date/ddmmyy" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_big"
                    android:text="@string/description_title_label"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/date_label" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:text="@{viewModel.selectedMovie.overview}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    tools:text="@tools:sample/lorem/random" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>